# wdf_compiler

./: .gitignore  CMakeLists.txt  README.md  rc_lowpass.cpp  rc_lowpass.h  rc_lowpass.wdf
tests/: .gitignore  CMakeLists.txt  chowdsp_wdf.h  test_runner.sh
tests/analog_eq/: analog_eq.cpp  analog_eq.rs  analog_eq.wdf  analog_eq_test.jai  analog_eq_test.rs  custom_analog_eq_rtype.h  custom_analog_eq_rtype.jai  custom_analog_eq_rtype.rs  custom_nonlinear_inductor.h  custom_nonlinear_inductor.jai  custom_nonlinear_inductor.rs
tests/bad_configs/: bad_input.wdf  bad_input2.wdf  bad_output.wdf  bad_output2.wdf  bad_token.wdf  dup_token.wdf  missing_circuit.wdf  missing_input.wdf  missing_output.wdf  missing_paren.wdf  missing_semicolon.wdf  missing_semicolon2.wdf  run_tests.py
tests/bassman_tone_stack/: bassman_tone_stack.c  bassman_tone_stack.cpp  bassman_tone_stack.net  bassman_tone_stack.rs  bassman_tone_stack.wdf  bassman_tone_stack_test.jai  bassman_tone_stack_test.rs  custom_bassman_rtype.h  custom_bassman_rtype.jai  custom_bassman_rtype.rs  custom_bassman_rtype_c.h
tests/baxandall_eq/: baxandall_eq.c  baxandall_eq.cpp  baxandall_eq.rs  baxandall_eq.wdf  baxandall_eq_test.jai  baxandall_eq_test.rs  custom_baxandall_rtype.h  custom_baxandall_rtype.jai  custom_baxandall_rtype.rs  custom_baxandall_rtype_c.h
tests/channel_hpf/: channel_hpf.c  channel_hpf.cpp  channel_hpf.wdf  channel_hpf_test.jai  channel_hpf_test.rs
tests/diode_circuit/: diode_circuit.cpp  diode_circuit.net  diode_circuit.wdf  diode_circuit_test.jai
tests/diode_clipper/: custom_diode_pair.h  diode_clipper.cpp  diode_clipper.wdf  diode_clipper_test.jai
tests/extra_comparisons/: baxandall_eq.dsp  baxandall_eq_chowdsp_poly.cpp  baxandall_eq_faust.cpp  baxandall_eq_faust.h  baxandall_eq_rt_wdf.cpp  diode_clipper.dsp  diode_clipper_chowdsp_poly.cpp  diode_clipper_faust.cpp  diode_clipper_faust.h  include_rt_wdf.h  preamp_eq.dsp  preamp_eq_comb_chowdsp_poly.cpp  preamp_eq_faust.cpp  preamp_eq_faust.h  preamp_eq_rt_wdf.cpp  rc_lowpass.dsp  rc_lowpass_chowdsp_poly.cpp  rc_lowpass_double_faust.cpp  (+6 more)
(+139 files in other folders)
